	  like "eix libstdc++-v3" looking for regular expressions as in
	  http://bugs.gentoo.org/show_bug.cgi?id=245487
	  or "eix @kde" also matching e.g. @kde3 as in
	  http://bugs.gentoo.org/show_bug.cgi?id=245773
	- Introduce DEFAULT_MATCH_FIELD; remove MATCH_.*_IF and MATCH_ORDER.
	- Fix order for <full...> and <=full...>. Slot comes after version.
	- Let Replace() in functions-eix.sh act on unexpanded arguments.
	- Only read the first set definition file if the same name occurs in
	  several directories.
	- Fix order in EIX_LOCAL_SETS: list local before global set files.
	- Fix missing includes, http://bugs.gentoo.org/show_bug.cgi?id=246270
	  http://bugs.gentoo.org/show_bug.cgi?id=246222
	- Fix LEVENSHTEIN_DISTANCE (actually honour the variable).
	- Name guards in a more standard manner (no dangerous _* names).
	- Internal change: More convenient argument order in split_string()

*eix-0.15.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow @set (from EIX_LOCAL_SETS) in /etc/portage/package.keywords.
	  This is more than portage currently does, although it is planned:
	  http://bugs.gentoo.org/show_bug.cgi?id=244366
	- Introduce /etc/portage/sets.eix in the EIX_LOCAL_SETS defaults,
	  and document in the description of that file and in the bug section
	  of the eix man page that eix' shortcomings for sets can be partially
	  (manually) circumvented with this directory.
	- For --set check also "@set" (i.e. in addition to "set").
	- Let @ default to set check (so that e.g. eix -e @kde is possible),
	  see http://bugs.gentoo.org/show_bug.cgi?id=245773
	- Introduce <empty...> to produce only category/name:slot output.
	- Change <full...> to produce less output (simplifies postprocessing).
	- Introduce <=full...>/<=empty...> to produce output portage likes.
	- Introduce %{\VAR} delayed references to avoid surprises in the
	  expansion of list variables like EIX_LOCAL_SETS or CACHE_METHOD.
	- Document escape mechanism of string lists in the manpage.